--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ stages:
   jobs:
   - job: Build
     pool:
-      vmImage: windows-latest
+      name: 'Default'
     steps:
     - task: UseDotNet@2
       displayName: Install .NET SDK $(dotNetSdkVersion)
