--- a/src/InClassBff.Api/appsettings.staging.json
+++ b/src/InClassBff.Api/appsettings.staging.json
@@ -13,5 +13,5 @@
       }
     }
   },
-  "AllowedCorsOrigins": "https://green-island-0dfab5603.1.azurestaticapps.net/"
+  "AllowedCorsOrigins": "https://green-island-0dfab5603.1.azurestaticapps.net"
 }
