--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ variables:
   projectPath: src/InClassBff.Api/InClassBFF.Api.csproj
   azureServiceConnection: 'inclass-azure-service-collection'
   webAppName: 'inclass-bff'
-  webAppHostName: ''
+  webAppHostName: 'https://inclass-bff-bqg5g9d6caa9g4es.westeurope-01.azurewebsites.net/'
   webAppKind: webApp
   healthCheckPath: /health
   healthCheckProtocol: https
@@ -81,7 +81,10 @@ stages:
               appType: $(webAppKind)
               appName: $(webAppName)
               package: $(Pipeline.Workspace)/drop/**/*.zip
-
+              appSettings: |
+                -ASPNETCORE_ENVIRONMENT Production
+                -ReverseProxy__Clusters__api-cluster__Destinations__api-destination__Address https://your-real-api.azurewebsites.net
+                -AllowedCorsOrigins https://green-island-0dfab5603.1.azurestaticapps.net
           - task: PowerShell@2
             displayName: Pipeline health check
             inputs:
