update keyclaoak production env

--- a/src/InClassBff.Api/appsettings.production.json
+++ b/src/InClassBff.Api/appsettings.production.json
@@ -1,6 +1,6 @@
 {
   "Keycloak": {
-    "Authority": "https://inclass-production.up.railway.app/realms/inclass"
+    "Authority": "https://inclass-production.up.railway.app/realms/InClass"
   },
   "ReverseProxy": {
     "Clusters": {
