--- a/src/InClassBff.Api/appsettings.Development.json
+++ b/src/InClassBff.Api/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Keycloak": {
+    "Authority": "http://localhost:8080/realms/InClass",
+    "ClientId": "inclass-bff",
+    "ClientSecret": "Qx5oQ3Trw1SsCyfO0S1xod2dzGZoJuhP",
+    "ResponseType": "code",
+    "SaveTokens": true,
+    "GetClaimsFromUserInfoEndpoint": true
   }
 }
