--- a/src/InClassBff.Api/appsettings.Production.json
+++ b/src/InClassBff.Api/appsettings.Production.json
@@ -13,5 +13,5 @@
       }
     }
   },
-  "AllowedCorsOrigins": "https://green-island-0dfab5603.1.azurestaticapps.net"
+  "AllowedCorsOrigins": "https://inclass-bff-bqg5g9d6caa9g4es.westeurope-01.azurewebsites.net"
 }
